# secret_be

./: .env  .gitignore  Cargo.toml  secret-be.service  secrets.sqlite  secrets.sqlite-shm  secrets.sqlite-wal
.github/workflows/: rust.yml
migrations/: 20230128095325_create_tables.sql
sql/: schema1.sql
src/: lib.rs  main.rs
src/models/: auth.rs
src/schema/: graph_schema.rs  message.rs  mod.rs  secret.rs  sql_functions.rs  user.rs
