[package]
name = "secret_be"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-poem"] }
poem = "1.3.50"
serde = { version = "1.0", features = ["derive"] }
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
