[package]
name = "secret_be"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
# shuttle-service = { version = "0.8.0", features = ["web-poem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6.0", features = ["ws", "headers"] }

sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }

anyhow = "1"
# shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
dotenvy = "0.15.6"
async-graphql = { version = "5.0.5", features = ["uuid"] }
async-graphql-axum = "5.0.5"
axum-auth = "0.4"
jsonwebtoken = "8"
base64 = "0.21.0"
magic-crypt = "3.1.12"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
uuid = "1.0"
tower-http = { version = "0.3.5", features = ["fs", "cors"] }
include_dir = "0.7.3"
mime_guess = "2.0.4"
tower = "0.4.13"
reqwest = { version = "0.11.14", features = ["json"] }
serde_urlencoded = "0.7.1"

[profile.dev.package.sqlx-macros]
opt-level = 3
